cmake_minimum_required(VERSION 3.10)
project(os_rsa_lab VERSION 1.0.0)
if($ENV{MODE} STREQUAL "static")
  ADD_LIBRARY(rsa STATIC rsa.c)
elseif($ENV{MODE} STREQUAL "shared")
  ADD_LIBRARY(rsa SHARED rsa.c)
endif()
set_target_properties(rsa PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(rsa PROPERTIES SOVERSION 1)
set_target_properties(rsa PROPERTIES PUBLIC_HEADER include/rsa.h)
