if($ENV{MODE} STREQUAL "static")
  set(LOAD_AS 1)
elseif($ENV{MODE} STREQUAL "shared")
  set(LOAD_AS $ENV{LOAD_AS})
endif()

if($ENV{LANG_LOCAL} STREQUAL "1")
  set(INVITE "\"Type a message: \"")
  set(BASE "\"Base: \"")
  set(PUBLIC_KEY "\"Public key: \"")
  set(PRIVATE_KEY "\"Private key: \"")
  set(ORIGINAL "\"Original (augmented): \"")
  set(ENCRYPTED "\"Encrypted: \"")
  set(DECRYPTED "\"Decrypted: \"")
elseif($ENV{LANG_LOCAL} STREQUAL "2")
  set(INVITE "\"Введіть повідомлення: \"")
  set(BASE "\"Базис: \"")
  set(PUBLIC_KEY "\"Публічний ключ: \"")
  set(PRIVATE_KEY "\"Приватний ключ: \"")
  set(ORIGINAL "\"Оригінальне повідомлення (доповнене): \"")
  set(ENCRYPTED "\"Закодоване: \"")
  set(DECRYPTED "\"Розкодоване: \"")
elseif($ENV{LANG_LOCAL} STREQUAL "3")
  set(INVITE "\"Введите сообщение: \"")
  set(BASE "\"Базис: \"")
  set(PUBLIC_KEY "\"Публичный ключ: \"")
  set(PRIVATE_KEY "\"Приватный ключ: \"")
  set(ORIGINAL "\"Оригинальное сообщение (дополненое): \"")
  set(ENCRYPTED "\"Закодированное: \"")
  set(DECRYPTED "\"Розкодированное: \"")
endif()

configure_file(${PROJECT_SOURCE_DIR}/src/include/src_config.h.in ${PROJECT_SOURCE_DIR}/src/include/src_config.h)

add_executable(os_rsa_lab main.c)
target_link_libraries(os_rsa_lab rsa)
